--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,26 @@
-* {
-    box-sizing: border-box;
-}
-
 @font-face {
-    font-family: 'Pixel';
-    src: url('../font/Pixel.ttf');
+    font-family: 'Oswald';
+    src: url('../font/Oswald-Regular.ttf') format('truetype');
 }
 
-[wm-flappy] {
-    margin: 0 auto;
-    position: relative;
-    border: 5px solid dodgerblue;
-    height: 700px;
-    width: 1200px;
-    background-color: deepskyblue;
-    overflow: hidden;
+* {
+    font-family: 'Oswald', sans-serif;
 }
 
-.bird{
-    position: absolute;
-    width: 60px;
-    left: calc(50% - 30px);
-    bottom: 50%;
-}
-
-.pair-of-pipes{
-    position: absolute;
-    top: 0;
+html {
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
-.pipe{
+body {
+    margin: 0;
+    background-color: #0D262D;
+    color: #fff;
+    height: 100%;
+}
+
+.content {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.pipe .border-pipe{
-    height: 30px;
-    width: 130px;
-    background-color: linear-gradient(90deg, #639301, #A5E82E);
-    border: 2px solid #000;
-}
-
-.pipe .body-pipe {
-    height: 40px;
-    width: 110px;
-    background-color: linear-gradient(90deg, #639301, #A5E82E);
-    border-left: 2px solid #000;
-    border-right: 2px solid #000;
+    min-height: 100%;
 }
