--- a/css/flappy.css
+++ b/css/flappy.css
@@ -24,7 +24,7 @@
     bottom: 50%;
 }
 
-.pair-of-pipes{
+.pair-of-barriers{
     position: absolute;
     top: 0;
     height: 100%;
@@ -33,20 +33,20 @@
     justify-content: space-between;
 }
 
-.pipe{
+.barrier{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.pipe .border-pipe{
+.border{
     height: 30px;
     width: 130px;
     background: linear-gradient(90deg, #639301, #A5E82E);
     border: 2px solid #000;
 }
 
-.pipe .body-pipe {
+.body {
     height: 150px;
     width: 110px;
     background: linear-gradient(90deg, #639301, #A5E82E);
