--- a/css/flappy.css
+++ b/css/flappy.css
@@ -64,3 +64,10 @@
     z-index: 1;
 }
 
+.restart {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    font-size: 20px;
+    display: none;
+}
